[gd_scene load_steps=2 format=3 uid="uid://c0qgtvq02moyw"]

[ext_resource type="Script" path="res://Events/choice.gd" id="1_0oq2c"]

[node name="Choice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0oq2c")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.352941)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(700, 500)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "CHOICE EVENT"
horizontal_alignment = 1

[node name="ChoiceContainer" type="HBoxContainer" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="EnergyButton" type="Button" parent="CenterContainer/Panel/CenterContainer/VBoxContainer/ChoiceContainer"]
custom_minimum_size = Vector2(150, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "+1 Energy
-10 Health"

[node name="HealthButton" type="Button" parent="CenterContainer/Panel/CenterContainer/VBoxContainer/ChoiceContainer"]
custom_minimum_size = Vector2(150, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "+30 Health"

[node name="LuckButton" type="Button" parent="CenterContainer/Panel/CenterContainer/VBoxContainer/ChoiceContainer"]
custom_minimum_size = Vector2(150, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Luck increase"

[node name="SkipButton" type="Button" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 25
text = "SKIP ->"

[connection signal="pressed" from="CenterContainer/Panel/CenterContainer/VBoxContainer/ChoiceContainer/EnergyButton" to="." method="_on_EnergyButton_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/CenterContainer/VBoxContainer/ChoiceContainer/HealthButton" to="." method="_on_HealthButton_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/CenterContainer/VBoxContainer/ChoiceContainer/LuckButton" to="." method="_on_LuckButton_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/CenterContainer/VBoxContainer/SkipButton" to="." method="_on_SkipButton_pressed"]
